--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/webpack --config webpack.config.js",
-    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js"
+    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js",
+    "dev": "webpack-dev-server --config webpack.config.js --hot --progress"
   },
   "repository": {
     "type": "git",
