--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/Pegggy/gallery/issues"
   },
-  "homepage": "https://github.com/Pegggy/gallery#readme",
+  "homepage": "https://github.com/Pegggy/gallery/build",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
